<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MailDemo</string>
    <string name="action_settings">Settings</string>
    <string name="emailaddress">電子郵件地址：</string>
    <string name="emailaddresshint">請輸入電子郵件地址...</string>
    <string name="mailcontent">郵件內容：</string>
    <string name="mailcontenthint">請輸入電子郵件內容...</string>
    <string name="sendbtn">寄出電子郵件</string>

</resources>